main/default/objects/Additional_Treatments_Vendor_Checklist__c/Additional_Treatments_Vendor_Checklist__c.object-meta.xml
<CustomObject>
    <label>Additional Treatments Vendor Checklist</label>
    <nameField>
        <label>Additional Treatment Group</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Additional Treatments Vendor Checklists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>