main/default/objects/Additional_Treatments_Vendor_Checklist__c/fields/E911_Number__c.field-meta.xml
<CustomField>
    <fullName>E911_Number__c</fullName>
    <label>E911 Number</label>
    <type>Phone</type>
</CustomField>