main/default/objects/Additional_Treatments_Vendor_Checklist__c/fields/How_many_Sessions_Channels_Lines_alloc__c.field-meta.xml
<CustomField>
    <fullName>How_many_Sessions_Channels_Lines_alloc__c</fullName>
    <label>How many Sessions/Channels/Lines alloc?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>