main/default/objects/Additional_Treatments_Vendor_Checklist__c/fields/SIP_ISDN_PRI_E911_Third_Party_PS_AL__c.field-meta.xml
<CustomField>
    <fullName>SIP_ISDN_PRI_E911_Third_Party_PS_AL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SIP  ISDN/PRI  E911 -- Third Party PS/AL</label>
    <type>Checkbox</type>
</CustomField>