main/default/objects/Additional_Treatments_Vendor_Checklist__c/fields/SIP_Trunking_ISDN_PRI_Outbound_Caller__c.field-meta.xml
<CustomField>
    <fullName>SIP_Trunking_ISDN_PRI_Outbound_Caller__c</fullName>
    <label>SIP Trunking / ISDN-PRI Outbound Caller</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PBX Provided</fullName>
                <default>true</default>
                <label>PBX Provided</label>
            </value>
            <value>
                <fullName>Single number: BTN</fullName>
            </value>
            <value>
                <fullName>Single Number: Custom Number:</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>